Fix the snippet section wrap

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -1,6 +1,7 @@
 :root {
   --color-orange-spice: #f7a837;
   --color-orange-spice-light: #f7cd37;
+  --color-orange-spice-dark: #be812b;
   --color-green: #6ed86e;
   --color-red: #FF5C79;
   --color-dark-white: #E1D9D1;
